--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
 SECRETDB=secreto
-USERNAMEDB=juandavid
-PASSWORDDB=azyz9510
-SESSIONSDB=sessions
-CHATDB=chat
-USERSDB=usuarios
+// URLDB="mongodb+srv://juandavid:azyz9510@cluster0.33nzl.mongodb.net/desafios?retryWrites=true&w=majority"
+URLDB="mongodb://localhost:27017/desafios"
